--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: HyG
-email: gaohaoyang126@126.com
-description: 浩阳的博客 前端爱好者
+title: xcldswz
+email: lee106036@gmail@.com
+description: 乡村里的守望者的博客
 # > # this means to ignore newlines until "baseurl:"
 #   Write an awesome description for your new site here. You can edit this
 #   line in _config.yml. It will appear in your document head meta (for
@@ -18,6 +18,6 @@ markdown: kramdown
 
 # highlight
 # 本地用rouge, github上用pygments
-# highlighter: pygments
+highlighter: pygments
 # highlighter: rouge
 # highlighter: false
