--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: xcldswz
-email: lee106036@gmail@.com
+email: leebo106036@gmail@.com
 description: 乡村里的守望者的博客
 # > # this means to ignore newlines until "baseurl:"
 #   Write an awesome description for your new site here. You can edit this
