--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: 机·智互联教育平台
+title: Rural Warder 
 email: leebo106036@gmail.com
-description: 机·智互联教育平台
+description: 乡村里的守望者
 # > # this means to ignore newlines until "baseurl:"
 #   Write an awesome description for your new site here. You can edit this
 #   line in _config.yml. It will appear in your document head meta (for
