--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ description: 乡村里的守望者
 # url: "http://xcldswz.xyz" # the base hostname & protocol for your site
 # twitter_username: jekyllrb
 github_username:  xcldswz
-permalink: /:title/
+permalink: /:year/:month/:day/:title/
 
 # Build settings
 markdown: kramdown
