--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: Rural Warder 
+title: IoTers 
 email: leebo106036@gmail.com
-description: 乡村里的守望者
+description: IoTers
 # > # this means to ignore newlines until "baseurl:"
 #   Write an awesome description for your new site here. You can edit this
 #   line in _config.yml. It will appear in your document head meta (for
